hphp/hack/test/typecheck/explicit_type_collection/explicit_type_collection_subtyping_sad.php.exp
File "explicit_type_collection_subtyping_sad.php", line 8, characters 8-25:
Some elements in this Vector are incompatible (Typing[4110])
File "explicit_type_collection_subtyping_sad.php", line 8, characters 12-12:
This is an object of type D
File "explicit_type_collection_subtyping_sad.php", line 7, characters 12-12:
It is incompatible with an object of type B
